# torchmuxer

./: .gitmodules  CMakeLists.txt  justfile  torch
cmake/: cuda.cmake
profile-experiments/: diffusion-1.py  justfile  timing.csv  torch2.ipynb
src/: common.h  constants.h  disable-torch-log.h.inc  fijit.cc  fijit.h  main.cc  mod.cpp
timing-experiments/: diffusion-1.py  justfile  mps-1-workers.csv  mps-2-workers.csv  mps-3-workers.csv  time-slice-1-workers.csv  time-slice-2-workers.csv  time-slice-3-workers.csv
torch-examples/: diffusion.py  fresh-fx.py  hello.py  node_0.json  node_1.json  ops.txt  py_obj_scanner.py  repro.py  resnet.py  triton-debug.py  triton-inference-resnet.py  triton-resnet.py
torch-examples/fx_mlp/: module.py  state_dict.pt
torch-examples/mlp/: module.py  state_dict.pt
torch-examples/mlp-prims/: module.py
torch-examples/mlp_before_aot/: module.py  state_dict.pt
torch-examples/resnet18/: model_avgpool.pt  model_layer1_0_relu.pt  model_layer1_1_relu.pt  model_layer2_0_relu.pt  model_layer2_1_relu.pt  model_layer3_0_relu.pt  model_layer3_1_relu.pt  model_layer4_0_relu.pt  model_layer4_1_relu.pt  model_maxpool.pt  model_relu.pt  module.py
torch-examples/resnet18-prims/: module.py
torch-examples/triton-gen/: triton-kernel.py
